<resources>
    <string name="app_name">Calculadora</string>
    <string name="cero">0</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>

    <string name="decimal">.</string>
    <string name="igual">=</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="masMenos">±</string>
    <string name="divide">&#247;</string>
    <string name="multiplica">×</string>
    <string name="porciento">%</string>
    <string name="borra">C</string>
    <string name="exponente">x&#696;</string>
    <string name="area">Área del círculo</string>
    <string name="longitud">Long. Circunferencia</string>
    <string name="rCuadrada">&#8730;</string>
    <string name="parentesis">( )</string>

    <string name="retroceso"> </string>
    <string name="display">0</string>
    <string name="volver">Volver</string>
    <string name="salir">Salir</string>
    <string name="altura_h">Altura(h)</string>
    <string name="base_b">Base(b)</string>
    <string name="multiapp">MultiApp</string>
    <string name="rea_del_tri_ngulo">Área del Triángulo</string>
    <string name="ecuaci_n_de_2_grado">Ecuación de 2º Grado</string>
    <string name="calculadora">Calculadora</string>
    <string name="resultado">resultado</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="altura">Altura</string>
    <string name="base">Base</string>
    <string name="resultadoe">resultadoe</string>
</resources>