<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80cbc4"
    tools:context=".Ecuacion">

    <FrameLayout
        android:layout_width="300sp"
        android:layout_height="300sp"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ecuacion" />
    </FrameLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        android:layout_marginStart="20sp"
        android:id="@+id/btnVolverDeEcuacion"
        android:layout_marginTop="20sp"
        android:background="#4f9b94"
        android:minWidth="125sp"
        android:onClick="onClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salir"
        android:layout_toEndOf="@+id/btnVolverDeEcuacion"
        android:id="@+id/btnSalir"
        android:layout_marginTop="20sp"
        android:layout_marginStart="115sp"
        android:background="#4f9b94"
        android:minWidth="125sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtA"
        android:hint="@string/a"
        android:layout_below="@+id/btnVolverDeEcuacion"
        android:layout_marginTop="220sp"
        android:layout_marginStart="30sp"
        android:layout_centerHorizontal="true"
        android:height="50sp"
        android:ems="10"
        android:inputType="numberDecimal"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtB"
        android:hint="@string/b"
        android:layout_below="@+id/txtA"
        android:layout_marginTop="10sp"
        android:layout_marginStart="30sp"
        android:layout_centerHorizontal="true"
        android:height="50sp"
        android:ems="10"
        android:inputType="numberSigned"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtC"
        android:hint="@string/c"
        android:layout_below="@+id/txtB"
        android:layout_marginTop="10sp"
        android:layout_marginStart="30sp"
        android:layout_centerHorizontal="true"
        android:height="50sp"
        android:ems="10"
        android:inputType="numberDecimal"/>


    <Button
        android:id="@+id/btnResultadoEcuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnVolverDeEcuacion"
        android:layout_marginStart="20sp"
        android:layout_marginTop="430sp"
        android:background="#4f9b94"
        android:minWidth="125sp"
        android:text="@string/resultado"
        android:onClick="onClick"/>

    <TextView
        android:id="@+id/viewResultadoEcuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnVolverDeEcuacion"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="430dp"
        android:layout_toEndOf="@id/btnResultadoEcuacion"
        android:width="100sp"
        android:height="80sp"
        android:ems="10"
        android:inputType="none"
        android:textAlignment="textEnd"
        android:textSize="25sp" />

</RelativeLayout>